# OpenMACE

./: .gitignore  .gitmodules  Copy_2_of_potential_fields_logging.csv  Copy_of_potential_fields_logging.csv  GUIConfig.json  Import_VehicleForce.m  Import_VehicleVelocity.m  LICENSE  LoadPlots.m  MACEConfig.xsd  README.md  configure.sh  installOpenMACE.sh  installPrereqs.sh  load_303030.bt  potential_fields.csv  potential_fields_logging.csv  testingFile.txt
src/: .gitignore  CMakeLists.txt  MACEConfig.cmake.in  MACEConfigVersion.cmake.in  src.pro
src/DigiMesh/: DigiMesh.pro  DigiMesh_global.h  callback.h  digimesh_radio.cpp  digimesh_radio.h  i_link_events.h  math_helper.h  serial_configuration.h  serial_link.cpp  serial_link.h  timer.h
src/MACEDigiMeshWrapper/: MACEDigiMeshWrapper.pro  component.h  interop.cpp  interop.h  interop_component.cpp  interop_component.h  mace_digimesh_wrapper.h  macewrapper_global.h  resource.h
src/TestGraph/: TestGraph.pro  main.cpp
src/TestMaps/: TestMaps  TestMaps.pro  main.cpp  testOctomap.bt
src/Testing_CommsLink/: Testing_CommsLink.pro  main.cpp
src/base/: base.pro  base_global.h
src/base_topic/: base_topic.pro  base_topic_components.h  base_topic_global.h  vehicle_topics.cpp  vehicle_topics.h
src/common/: adept_model_types.h  background_tasks.h  chain inheritance.h  chain_inheritance.h  class_forward.h  common.h  common.pro  enum_class_hash.h  hsm.h  numerical_analysis.h  object_int_tuple.h  optional_parameter.h  optional_parameter.h.AA9432  pointer_collection.h  publisher.h  string_methods.h  test_key.h  thread_manager.h  transmit_queue.h  watchdog.h
src/comms/: CMakeLists.txt  comms.pro  comms_events.h  comms_global.h  comms_marshaler.cpp  comms_marshaler.h  i_link.h  i_link_events.h  i_protocol.h  i_protocol_events.h  i_protocol_mavlink_events.h  link_configuration.h  mavlink_configuration.cpp  mavlink_configuration.h  protocol_configuration.h  protocol_mavlink.cpp  protocol_mavlink.h  serial_configuration.cpp  serial_configuration.h  serial_link.cpp  serial_link.h  tcp_configuration.cpp  tcp_configuration.h  tcp_link.cpp  tcp_link.h  udp_configuration.cpp  udp_configuration.h  udp_link.cpp  udp_link.h
src/commsExample/: commsExample.pro  comms_example.cpp  comms_example.h  comms_example_global.h
src/commsMACE/: commsMACE.pro  comms_events_mace.h  comms_marshaler_mace.cpp  comms_marshaler_mace.h  commsmace_global.h  digimesh_configuration.cpp  digimesh_configuration.h  digimesh_link.cpp  digimesh_link.h  ethernet_configuration.cpp  ethernet_configuration.h  ethernet_link_mace.cpp  ethernet_link_mace.h  generic_encodedecode_library.h  i_link_events_mace.h  i_link_mace.h  i_protocol_events_mace.h  i_protocol_mace.h  i_protocol_mavlink_events_mace.h  link_configuration_mace.h  mavlink_configuration_mace.cpp  mavlink_configuration_mace.h  protocol_configuration_mace.h  protocol_mavlink_mace.cpp  protocol_mavlink_mace.h  receiver_thread.h  serial_configuration_mace.cpp  serial_configuration_mace.h  serial_link_mace.cpp  serial_link_mace.h  tcp_configuration_mace.cpp  tcp_configuration_mace.h  tcp_link_mace.cpp  tcp_link_mace.h  udp_configuration_mace.cpp  udp_configuration_mace.h  udp_link_mace.cpp  udp_link_mace.h
src/commsMACEHelper/: commsMACEHelper.pro  comms_mace_helper.cpp  comms_mace_helper.h  commsmacehelper_global.h
src/commsMAVLINK/: commsMAVLINK.pro  comms_mavlink.cpp  comms_mavlink.h  commsmavlink_global.h
src/controllers/: I_controller.h  I_message_notifier.h  base_data_item.h  controller_collection.h  controllers.pro  controllers_global.h  generic_controller.h
src/data/: adept_terminate_types.h  autopilot_types.h  command_ack_type.h  command_validity_type.h  comms_protocol.h  controller_comms_state.h  controller_state.h  coordinate_frame.h  data.pro  data_get_set_notifier.h  data_global.h  dogfight_teams.h  environment_time.cpp  environment_time.h  event_tag.cpp  event_tag.h  i_topic_component_data_object.h  jsonconverter.h  loiter_direction.h  mace_hsm_state.h  mav_type_definitions.h  mission_command.h  mission_execution_state.h  mission_state.h  mission_type.h  operating_mode.h  reference_altitude.h  reference_cartesian.h  reference_georeference.h  speed_frame.h  system_description.cpp  system_description.h  system_type.h  timer.cpp  timer.h  timer_lambda.cpp  timer_lambda.h  topic_data_object_collection.h  vehicle_command_types.h  vehicle_types.h
src/data_auctioneer/: assignment_task_queue.cpp  assignment_task_queue.h  auction_logger.cpp  auction_logger.h  auction_statistics_agent.cpp  auction_statistics_agent.h  auction_statistics_controller.cpp  auction_statistics_controller.h  auctioneer_components.h  available_task_queue.cpp  available_task_queue.h  awarded_task_queue.cpp  awarded_task_queue.h  data_auctioneer.pro  data_auctioneer_global.h  master_task_queue.cpp  master_task_queue.h  scrub_message.h  scrub_message_topic.cpp  scrub_message_topic.h  task_container.cpp  task_container.h  task_status_topic.cpp  task_status_topic.h
src/data_generic_command_item/: abstract_command_item.h  abstract_command_item.h.IuVbqd  command_item_ack.cpp  command_item_ack.h  command_item_components.h  command_item_interface.h  command_item_type.h  data_generic_command_item.pro  data_generic_command_item_global.h  interface_command_helper.cpp  interface_command_helper.h  interface_command_item.h
src/data_generic_command_item_topic/: command_item_topic.cpp  command_item_topic.h  command_item_topic_ack.cpp  command_item_topic_ack.h  command_item_topic_components.h  command_item_topic_takeoff.cpp  command_topic_change_mode.h  command_topic_land.cpp  command_topic_land.h  command_topic_takeoff.h  data_generic_command_item_topic.cpp  data_generic_command_item_topic.h  data_generic_command_item_topic.pro  data_generic_command_item_topic_global.h
src/data_generic_item/: data_generic_item.pro  data_generic_item_GPS.cpp  data_generic_item_GPS.h  data_generic_item_battery.cpp  data_generic_item_battery.h  data_generic_item_components.h  data_generic_item_flightmode.cpp  data_generic_item_flightmode.h  (+19 more)
src/example/: main.cpp  (+6 more)
(+3158 files in other folders)
