<?xml version="1.0"?>
<package>
  <name>transform_sensors</name>
  <version>0.0.0</version>
  <description>Subscribe to sensors and transform to common frame</description>

  <maintainer email="pat.nolan@heronsystems.com">Patrick Nolan</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/sim_vehicles_description</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>

</package>